check for unique name/email when creating user/event, updated api-docs
